--- a/Client/Shared/LoginDisplay.razor
+++ b/Client/Shared/LoginDisplay.razor
@@ -7,14 +7,14 @@
 <AuthorizeView>
     <Authorized>
         <div class="pa-4 justify-center my-4 mud-text-align-center">
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" Link="authentication/profile">Hi, @context.User.Identity.Name!</MudButton>
+            Hi, @context.User.Identity.Name
             <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="BeginSignOut">Log Out</MudButton>
         </div>
     </Authorized>
     <NotAuthorized>
         <div class="pa-4 justify-center my-4 mud-text-align-center">
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" Link="authentication/register">Register</MudButton>
-            <MudButton Variant="Variant.Filled" Color="Color.Secondary" Link="authentication/login">Log in</MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Link="register">Register</MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Secondary" Link="login">Log in</MudButton>
         </div>
     </NotAuthorized>
 </AuthorizeView>
@@ -23,6 +23,6 @@
     private async Task BeginSignOut(MouseEventArgs args)
     {
         await SignOutManager.SetSignOutState();
-        Navigation.NavigateTo("authentication/logout");
+        Navigation.NavigateTo("logout");
     }
 }
