--- a/Client/Shared/LoginDisplay.razor
+++ b/Client/Shared/LoginDisplay.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
 @inject NavigationManager Navigation
-@inject SignOutSessionStateManager SignOutManager
+@inject SmartAuthenticationService AuthenticationService
 
 <AuthorizeView>
     <Authorized>
@@ -22,7 +22,7 @@
 @code{
     private async Task BeginSignOut(MouseEventArgs args)
     {
-        await SignOutManager.SetSignOutState();
+        await AuthenticationService.Logout();
         Navigation.NavigateTo("logout");
     }
 }
