--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -20,9 +20,20 @@
             <MudIconButton Icon="@Icons.Material.Outlined.Add" OnClick="OpenNewRoomDialog" />
         </MudToolBar>
         <div class="d-flex flex-column px-4" style="max-height:65vh;min-height:65vh; overflow:scroll;" id="chatContainer">
-            @foreach (var room in ChatRooms)
-            {
-            }
+            <MudGrid Justify="Justify.FlexStart">
+                @foreach (var room in ChatRooms)
+                {
+                    <MudItem xs="3">
+                        <MudPaper Class="d-flex flex-column justify-center mud-width-full pa-4">
+                            <MudToolBar Dense="true">
+                                <MudText Typo="Typo.h6">@room.Name</MudText>
+                                <MudSpacer />
+                                <MudIconButton Icon="@Icons.Material.Outlined.CheckCircle" Size="Size.Medium" OnClick="() => SubscribeToRoom(room.Id)"/>
+                            </MudToolBar>
+                        </MudPaper>
+                    </MudItem>
+                }
+            </MudGrid>
         </div>
     </MudPaper>
     <MudPaper Elevation="25" Class="pa-3 ml-6" MinWidth="400px">
@@ -100,10 +111,17 @@
         StateHasChanged();
     }
 
-    private void OpenNewRoomDialog()
+    private async Task SubscribeToRoom(int roomId)
+    {
+        await SmartChatService.SubscribeToRoom(roomId);
+    }
+
+    private async void OpenNewRoomDialog()
     {
         var options = new DialogOptions { CloseOnEscapeKey = true };
         var dialog = DialogService.Show<NewRoomDialog>();
+
+        var result = await dialog.Result;
     }
 
     private async Task LoadUserChat(string UserId)
