--- a/Client/Pages/Chat.razor
+++ b/Client/Pages/Chat.razor
@@ -11,42 +11,42 @@
 @inject SmartChatService SmartChatService
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
-<div class="d-flex flex-grow-1 flex-row">
-    <MudPaper Elevation="25" Class="py-4 flex-grow-1">
-        <MudToolBar Dense="true">
             @if (string.IsNullOrEmpty(ContactId))
             {
-                <MudIcon Icon="@Icons.Material.Outlined.Person" Style="margin-right:10px"></MudIcon>
-                <MudText Typo="Typo.h6">chat</MudText>
-            }
-            else
-            {
-                <MudIcon Icon="@Icons.Material.Outlined.ChatBubble" Style="margin-right:10px"></MudIcon>
-                <MudText Typo="Typo.h6">@ContactEmail</MudText>
-            }
-        </MudToolBar>
-        <div class="d-flex flex-column px-4" style="max-height:65vh;min-height:65vh; overflow:scroll;" id="chatContainer">
-            @foreach (var message in messages)
-            {
-                <div class="d-flex flex-row my-4">
-                    <div class="mr-4">
-                        <MudAvatar Color="Color.Secondary" Style="height:50px; width:50px;">@message.FromUser.Email.ToUpper().FirstOrDefault()</MudAvatar>
-                    </div>
-                    <div>
-                        @*<MudText Typo="Typo.body1">@message.FromUser.Email</MudText>*@
-                        <MudText Typo="Typo.caption" Style="font-size: xx-small!important;">@message.Created.ToString("dd MMM, yyyy hh:mm tt")</MudText>
-                        <MudText Typo="Typo.body2" Style=" padding: 15px;background-color: var(--mud-palette-background-grey);border-radius: 5px;margin-top:5px">@message.Content</MudText>
-                    </div>
+<MudPaper Elevation="25" Class="py-4 flex-grow-1">
+    <MudToolBar Dense="true">
+        @if (string.IsNullOrEmpty(ContactId))
+        {
+            <MudIcon Icon="@Icons.Material.Outlined.Person" Style="margin-right:10px"></MudIcon>
+            <MudText Typo="Typo.h6">chat</MudText>
+        }
+        else
+        {
+            <MudIcon Icon="@Icons.Material.Outlined.ChatBubble" Style="margin-right:10px"></MudIcon>
+            <MudText Typo="Typo.h6">@ContactEmail</MudText>
+        }
+    </MudToolBar>
+    <div class="d-flex flex-column px-4" style="max-height:65vh;min-height:65vh; overflow:scroll;" id="chatContainer">
+        @foreach (var message in Messages)
+        {
+            <div class="d-flex flex-row my-4">
+                <div class="mr-4">
+                    <MudAvatar Color="Color.Secondary" Style="height:50px; width:50px;">@message.AuthorName.ToUpper().FirstOrDefault()</MudAvatar>
                 </div>
-            }
-        </div>
-        <MudPaper Elevation="25" Class="d-flex flex-row px-2 mx-4" Style="">
-            <MudTextField T="string" Placeholder="Enter your message..."DisableUnderLine="true" Class="mt-n2 mx-4"
-                          @bind-Value="CurrentMessage" For="@(()=> CurrentMessage)" />
-            <MudButton OnClick="SubmitAsync" StartIcon="@Icons.Material.Outlined.Send" Color="Color.Secondary" ButtonType="ButtonType.Button">Send</MudButton>
-        </MudPaper>
+                <div>
+                    <MudText Typo="Typo.body1">@message.AuthorName</MudText>
+                    <MudText Typo="Typo.caption" Style="font-size: xx-small!important;">@message.Created.ToString("dd MMM, yyyy hh:mm tt")</MudText>
+                    <MudText Typo="Typo.body2" Style=" padding: 15px;background-color: var(--mud-palette-background-grey);border-radius: 5px;margin-top:5px">@message.Content</MudText>
+                </div>
+            </div>
+        }
+    </div>
+    <MudPaper Elevation="25" Class="d-flex flex-row px-2 mx-4" Style="">
+        <MudTextField T="string" Placeholder="Enter your message..."DisableUnderLine="true" Class="mt-n2 mx-4"
+                        @bind-Value="CurrentMessage" For="@(()=> CurrentMessage)" />
+        <MudButton OnClick="SubmitAsync" StartIcon="@Icons.Material.Outlined.Send" Color="Color.Secondary" ButtonType="ButtonType.Button">Send</MudButton>
     </MudPaper>
-</div>
+</MudPaper>
 
 @code {
     [CascadingParameter] public HubConnection hubConnection { get; set; }
@@ -56,7 +56,7 @@
     [Parameter] public string ContactEmail { get; set; }
     [Parameter] public string ContactId { get; set; }
 
-    private List<ChatMessage> messages = new List<ChatMessage>();
+    [Parameter] public List<ChatMessage> Messages { get; set; } = new List<ChatMessage>();
 
     private async Task SubmitAsync()
     {
