Can Broadcast to Specific Users Now
- Now send jwt tokens when communicating with signalR
- Connections to SignalR now have user id information allowing messages to be sent to individual connections associated with that user id

--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -34,8 +34,15 @@
 
     protected override async Task OnInitializedAsync()
     {
-        hubConnection = new HubConnectionBuilder().WithUrl(NavigationManager.ToAbsoluteUri("/signalRHub")).Build();
+        hubConnection = new HubConnectionBuilder()
+            .WithUrl(NavigationManager.ToAbsoluteUri("/signalRHub"), options => 
+                {
+                    options.AccessTokenProvider = ((SmartAuthenticationStateProvider)AuthenticationStateProvider).GetToken;
+                })
+            .Build();
+
         await hubConnection.StartAsync();
+
         hubConnection.On<ChatMessage>("ChatNotification", (message) =>
         {
             SnackBar.Add($"New Message From {message.AuthorName}", Severity.Info, config =>
