Add ability to create new room and new contacts
- Add new contact dialog
- Add functionality to get results back from dialog and update
- Add method in signalr hub to broadcast to room subscribers when sending a message in a room

--- a/Client/Pages/Chat.razor
+++ b/Client/Pages/Chat.razor
@@ -89,6 +89,10 @@
                     StateHasChanged();
                 }
             }
+            else
+            {
+            
+            }
         });
 
         var state = await AuthenticationStateProvider.GetAuthenticationStateAsync();
@@ -138,7 +142,7 @@
 
                 if (messageId > 0)
                 {
-                    //await hubConnection.SendAsync("BroadcastMessageAsync", messageSent, ContactId);
+                    await hubConnection.SendAsync("BroadcastRoomMessageAsync", messageSent, RoomId);
 
                     Messages.Add(messageSent);
                 }
